# AI-SEMINAR

./: .gitignore  README.md  compose.yml  download_network.py  get_POIS_loc.py  get_POIS_title.py  main.py  pyproject.toml  simulation.py
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  server.py
backend/data/: barcelona_pois_model.json
backend/models/: POI.py  Simulation.py  __init__.py
backend/scoring/: ScoringFactory.py  __init__.py  scoring_strategies.py
backend/simulation/: __init__.py  agent.py  analysis.py  profiles.py  scoring.py  sentiment.py
backend/utils/: __init__.py  evaluate.py  simulation_helpers.py  utils.py
data/: barcelona_pois_model.json
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: barcelona_pois.geojson  index.html
frontend/src/: App.jsx  GraphOverlay.jsx  InfoPanel.jsx  ItineraryPanel.jsx  Statistics.jsx  graphData.js  index.css  index.js
models/: Interest.py  POI.py  Tourist.py  __init__.py
scoring/: ScoringFactory.py  scoring_strategies.py
simulation/: __init__.py  agent.py  scoring.py  sentiment.py
utils/: simulation_helpers.py
