[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "ollama>=0.6.2",
    "osmnx>=2.1.0",
    "pydantic>=2.13.4",
    "uuid>=1.30",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["backend"]